attempting to fix background on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -398,14 +398,14 @@ a{
 .background-page-main{
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 1;
   margin: 0;
   padding: 0;
   clear: both;
   display: table;
   background-image: url("../background.png");
-  background-size: auto 100%;
+  background-size: auto 100vh;
   background-position: left;
   background-color: white;
   background-repeat: no-repeat;
